fix overlapping footer, relative image size

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,3 @@
 .content {
-    margin-bottom: 70px;
+    margin-bottom: 120px;
 }
